--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/nsajithkumar/v7Backend#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^3.23.3",
     "md5": "^2.2.1",
-    "mongoose": "^5.9.20"
+    "mongoose": "^5.9.20",
+    "nodemailer": "^6.4.10"
   }
 }
